--- a/06_HelloMVC/web/WEB-INF/classes/sql/board/board-query.properties
+++ b/06_HelloMVC/web/WEB-INF/classes/sql/board/board-query.properties
@@ -1,4 +1,5 @@
 selectBoardCount = select count(*) from board 
-selectBoardList = select * from ( select rownum as rnum, a.* from (select * from board order by board_date) a ) where rnum between ? and ?
+selectBoardList = select * from ( select rownum as rnum, a.* from (select * from board order by board_date desc) a ) where rnum between ? and ?
 selectBoardView = select * from board where board_no = ?
-insertBoard = insert into board values( SEQ_BOARD_NO.nextval, ? , ? , ? , ? , ? , default , 0 )
+insertBoard = insert into board values( SEQ_BOARD_NO.nextval, ? , ? , ? , ? , ? , default , default )
+updateReadCount = update board set board_readCount = board_readCount+1 where board_no = ?
