--- a/06_HelloMVC/web/WEB-INF/classes/sql/notice/notice-query.properties
+++ b/06_HelloMVC/web/WEB-INF/classes/sql/notice/notice-query.properties
@@ -1,5 +1,5 @@
 selectCountList = select count(*) from Notice where status='Y'
-selectNoticeList=select * from (select rownum as rnum, a.* from ( select * from Notice where status='Y' order by notice_date) a) where rnum between ? and ?
+selectNoticeList=select * from (select rownum as rnum, a.* from ( select * from Notice where status='Y' order by notice_date desc) a) where rnum between ? and ?
 selectNoticeView = select * from notice where notice_no = ?
 insertNotice = insert into Notice values(SEQ_NOTICE_NO.NEXTVAL, ?, ?, ?, default, ?, default)
 updateNotice = update Notice set notice_title = ? , notice_writer = ?, filepath = ?, notice_content = ? where notice_no = ?
