--- a/06_HelloMVC/web/WEB-INF/classes/sql/board/board-query.properties
+++ b/06_HelloMVC/web/WEB-INF/classes/sql/board/board-query.properties
@@ -3,3 +3,6 @@ selectBoardList = select * from ( select rownum as rnum, a.* from (select * from
 selectBoardView = select * from board where board_no = ?
 insertBoard = insert into board values( SEQ_BOARD_NO.nextval, ? , ? , ? , ? , ? , default , default )
 updateReadCount = update board set board_readCount = board_readCount+1 where board_no = ?
+insertComment = insert into board_Comment values(SEQ_BOARD_COMMENT_NO.nextval, ? , ? , ? , ? , ? , default )
+selectBoardComment = select * from board_comment where board_ref = ? start with board_comment_level = 1 connect by prior board_comment_no = board_comment_ref
+deleteComment = delete from board_comment where board_ref = ? and  board_comment_no = ? 
